Fix score alignment

--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -232,20 +232,11 @@
 
 .tomb
   margin-left 6px
-  score
-    position initial
-    margin-left -6px
-    width 18px
-    height 18px
-    margin-top -5px
-    background-size cover
-    display inline-block
   piece
     position initial
     margin-left -6px
     width 18px
     height 18px
-    margin-top -5px
     background-size cover
     display inline-block
   .pawn
